Aggiunto framework colonne su 12-bool

--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -4,11 +4,60 @@
   box-sizing: border-box;
 }
 
-/* debug */
+/* debug generale*/
 
 .container{
   width: 1170px;
   height: 500px;
   margin: 0;
   background-color: lightgreen;
+}
+.container:after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
+
+/* debug colonne */
+[class*="col-"]{
+  float: left;
+  height: 100%;
+}
+
+.col-1{
+  width: calc((100% / 12) * 1);
+}
+.col-2{
+  width: calc((100% / 12) * 2);
+}
+.col-3{
+  width: calc((100% / 12) * 3);
+}
+.col-4{
+  width: calc((100% / 12) * 4);
+}
+.col-5{
+  width: calc((100% / 12) * 5);
+}
+.col-6{
+  width: calc((100% / 12) * 6);
+}
+.col-7{
+  width: calc((100% / 12) * 7);
+}
+.col-8{
+  width: calc((100% / 12) * 8);
+}
+.col-9{
+  width: calc((100% / 12) * 9);
+}
+.col-10{
+  width: calc((100% / 12) * 10);
+}
+.col-11{
+  width: calc((100% / 12) * 11);
+}
+.col-12{
+  width: calc((100% / 12) * 12);
 }
