fatta prima riga

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,14 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+/* stile colonne */
+
+[class*="col-"]{
+  text-align: center;
+  vertical-align: middle;
+  line-height: 100px;
+  height: 20%;
+  background-color: pink;
+  border: 1px solid black;
+}
