fatta seconda colonna, corretto errore in 12-bool

--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -6,12 +6,13 @@
 
 /* debug generale*/
 
-.container{
+.debug{
   width: 1170px;
   height: 500px;
   margin: 0;
   background-color: lightgreen;
 }
+
 .container:after{
   content: "";
   display: block;
