--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -24,7 +24,6 @@
   float: left;
 
 }
-
 .col-1{
   width: calc((100% / 12) * 1);
 }
@@ -60,4 +59,40 @@
 }
 .col-12{
   width: calc((100% / 12) * 12);
+}
+
+/* offset */
+
+.col-offset-1{
+  margin-left: calc((100% / 12) * 1);
+}
+.col-offset-2{
+  margin-left: calc((100% / 12) * 2);
+}
+.col-offset-3{
+  margin-left: calc((100% / 12) * 3);
+}
+.col-offset-4{
+  margin-left: calc((100% / 12) * 4);
+}
+.col-offset-5{
+  margin-left: calc((100% / 12) * 5);
+}
+.col-offset-6{
+  margin-left: calc((100% / 12) * 6);
+}
+.col-offset-7{
+  margin-left: calc((100% / 12) * 7);
+}
+.col-offset-8{
+  margin-left: calc((100% / 12) * 8);
+}
+.col-offset-9{
+  margin-left: calc((100% / 12) * 9);
+}
+.col-offset-10{
+  margin-left: calc((100% / 12) * 10);
+}
+.col-offset-11{
+  margin-left: calc((100% / 12) * 11);
 }
