--- a/css/12-bool.css
+++ b/css/12-bool.css
@@ -7,11 +7,13 @@
 /* debug generale*/
 
 .debug{
-  width: 1170px;
+  max-width: 1170px;
   height: 500px;
   margin: 0;
   background-color: lightgreen;
 }
+
+/* regola container */
 
 .container:after{
   content: "";
@@ -19,7 +21,8 @@
   clear: both;
 }
 
-/* debug colonne */
+/* framework colonne */
+
 [class*="col-"]{
   float: left;
 
