--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,18 @@
 .bonus{
   margin-top: 20px;
 }
+
+/* button */
+
+.col-3.col-offset-2.container .col-2 p{
+  font-size: 70%;
+  border: 1px solid blue;
+  margin: 20px 5px;
+  background-color: green;
+  height: auto%;
+}
+.col-3.col-offset-2.container .col-2 p:hover{
+  background-color: yellow;
+  text-shadow: 5px;
+  cursor: pointer;
+}
